--- a/src/main/webapp/_2_ProducesInject.xhtml
+++ b/src/main/webapp/_2_ProducesInject.xhtml
@@ -9,6 +9,8 @@
    </h:head>
    <h:body>
   
-     Produces Inject: <h:outputText value="#{injectCdi.nameList}"   />
+     Produces Inject: <h:outputText value="#{injectCdi.nameList}"   /> <br/>
+     Produces adım soyadı: <h:outputText value="#{injectCdi.nameSurname}"   /> <br/>
+   
    </h:body>
 </html>
