--- a/src/main/webapp/_4_Scope.xhtml
+++ b/src/main/webapp/_4_Scope.xhtml
@@ -9,7 +9,9 @@
    </h:head>
    <h:body>
   
-     Request Scope: <h:outputText value="#{bilgeadam1.request}"   /> <br/>
+     Request Scope: <h:outputText value="#{bilgeadam1.scoped}"   /> <br/>
+     Session Scope: <h:outputText value="#{bilgeadam2.scoped}"   /> <br/>
+     Application Scope: <h:outputText value="#{bilgeadam3.scoped}"   /> <br/>
    
    </h:body>
 </html>
